Fixato wrap delle celle

--- a/css/style.css
+++ b/css/style.css
@@ -15,25 +15,23 @@ header {
 }
 
 main{
-
     height: calc(100vh - 80px);
     width: 100%;
-
+    background-color: gray;
+    padding-top: 50px;
 }
 
 #container-celle{
-
-    border: 1px dashed green;
+    border: 1px solid red;
     width: 750px;
     height: 750px;
-    margin: 50px auto;
-    
-
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .cella{
-    border: 1px dashed green;
+    border: 1px solid red;
     width: calc(100% / 10);
     height: calc(100% / 10);
-
 }
